--- a/env.yml
+++ b/env.yml
@@ -3,219 +3,218 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _tflow_select=2.3.0=eigen
-  - abseil-cpp=20200923.3=h0e60522_0
-  - absl-py=0.12.0=py38haa95532_0
-  - aiohttp=3.7.4=py38h2bbff1b_1
-  - altair=4.1.0=py_1
-  - argh=0.26.2=pyh9f0ad1d_1002
-  - argon2-cffi=20.1.0=py38h294d835_2
-  - arrow-cpp=3.0.0=py38hd630659_4_cpu
-  - astor=0.8.1=py38haa95532_0
-  - astunparse=1.6.3=py_0
-  - async-timeout=3.0.1=py38haa95532_0
-  - async_generator=1.10=py_0
-  - attrs=21.2.0=pyhd3eb1b0_0
-  - aws-c-cal=0.4.5=hffb5579_7
-  - aws-c-common=0.5.1=h8ffe710_0
-  - aws-c-event-stream=0.2.7=h141f785_0
-  - aws-c-io=0.9.0=hc33d8df_1
-  - aws-checksums=0.1.11=hc33d8df_2
-  - aws-sdk-cpp=1.8.138=hac61a3b_3
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - base58=2.1.0=pyhd8ed1ab_0
-  - blas=1.0=mkl
-  - bleach=3.3.0=pyh44b312d_0
-  - blinker=1.4=py38haa95532_0
-  - boto3=1.17.97=pyhd8ed1ab_0
-  - botocore=1.20.97=pyhd8ed1ab_0
-  - brotli=1.0.9=h0e60522_4
-  - brotlipy=0.7.0=py38h2bbff1b_1003
-  - bzip2=1.0.8=h8ffe710_4
-  - c-ares=1.17.1=h8ffe710_1
-  - ca-certificates=2021.5.25=haa95532_1
-  - cachetools=4.2.2=pyhd3eb1b0_0
-  - certifi=2021.5.30=py38haa95532_0
-  - cffi=1.14.5=py38hcd4344a_0
-  - chardet=3.0.4=py38haa95532_1003
-  - click=8.0.1=pyhd3eb1b0_0
-  - colorama=0.4.4=pyh9f0ad1d_0
-  - coverage=5.5=py38h2bbff1b_2
-  - cryptography=3.4.7=py38h71e12ea_0
-  - cycler=0.10.0=py38_0
-  - cython=0.29.23=py38hd77b12b_0
-  - decorator=5.0.9=pyhd8ed1ab_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
-  - entrypoints=0.3=pyhd8ed1ab_1003
-  - freetype=2.10.4=hd328e21_0
-  - gast=0.4.0=py_0
-  - gflags=2.2.2=ha925a31_1004
-  - gitdb=4.0.7=pyhd8ed1ab_0
-  - gitpython=3.1.18=pyhd8ed1ab_0
-  - glog=0.4.0=h0174b99_3
-  - google-auth=1.31.0=pyhd3eb1b0_0
-  - google-auth-oauthlib=0.4.4=pyhd3eb1b0_0
-  - google-pasta=0.2.0=py_0
-  - grpc-cpp=1.35.0=h9c91839_0
-  - grpcio=1.36.1=py38hc60d5dd_1
-  - h5py=2.10.0=py38h5e291fa_0
-  - hdf5=1.10.4=h7ebc959_0
-  - icc_rt=2019.0.0=h0cc432a_1
-  - icu=58.2=ha925a31_3
-  - idna=2.10=pyhd3eb1b0_0
-  - importlib-metadata=3.10.0=py38haa95532_0
-  - intel-openmp=2021.2.0=haa95532_616
-  - ipykernel=5.5.5=py38h43734a8_0
-  - ipython=7.24.1=py38h43734a8_0
-  - ipython_genutils=0.2.0=py_1
-  - ipywidgets=7.6.3=pyhd3deb0d_0
-  - jedi=0.18.0=py38haa244fe_2
-  - jinja2=3.0.1=pyhd8ed1ab_0
-  - jmespath=0.10.0=pyh9f0ad1d_0
-  - joblib=1.0.1=pyhd8ed1ab_0
-  - jpeg=9b=hb83a4c4_2
-  - jsonschema=3.2.0=pyhd8ed1ab_3
-  - jupyter_client=6.1.12=pyhd8ed1ab_0
-  - jupyter_core=4.7.1=py38haa244fe_0
-  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
-  - jupyterlab_widgets=1.0.0=pyhd8ed1ab_1
-  - keras=2.4.3=0
-  - keras-applications=1.0.8=py_1
-  - keras-base=2.4.3=py_0
-  - keras-preprocessing=1.1.2=pyhd3eb1b0_0
-  - kiwisolver=1.3.1=py38hd77b12b_0
-  - krb5=1.19.1=hbae68bd_0
-  - libcurl=7.77.0=h789b8ee_0
-  - libpng=1.6.37=h2a8f88b_0
-  - libprotobuf=3.14.0=h23ce68f_0
-  - libsodium=1.0.18=h8d14728_1
-  - libssh2=1.9.0=h680486a_6
-  - libthrift=0.13.0=hdfef310_6
-  - libtiff=4.2.0=hd0e1b90_0
-  - libutf8proc=2.6.1=hcb41399_0
-  - llvmlite=0.36.0=py38h57a6900_0
-  - lz4-c=1.9.3=h2bbff1b_0
-  - m2w64-gcc-libgfortran=5.3.0=6
-  - m2w64-gcc-libs=5.3.0=7
-  - m2w64-gcc-libs-core=5.3.0=7
-  - m2w64-gmp=6.1.0=2
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - markdown=3.3.4=py38haa95532_0
-  - markupsafe=2.0.1=py38h294d835_0
-  - matplotlib=3.3.4=py38haa95532_0
-  - matplotlib-base=3.3.4=py38h49ac443_0
-  - matplotlib-inline=0.1.2=pyhd8ed1ab_2
-  - mistune=0.8.4=py38h294d835_1003
-  - mkl=2021.2.0=haa95532_296
-  - mkl-service=2.3.0=py38h2bbff1b_1
-  - mkl_fft=1.3.0=py38h277e83a_2
-  - mkl_random=1.2.1=py38hf11a4ad_2
-  - msys2-conda-epoch=20160418=1
-  - multidict=5.1.0=py38h2bbff1b_2
-  - nbclient=0.5.3=pyhd8ed1ab_0
-  - nbconvert=6.0.7=py38haa244fe_3
-  - nbformat=5.1.3=pyhd8ed1ab_0
-  - nest-asyncio=1.5.1=pyhd8ed1ab_0
-  - notebook=6.4.0=pyha770c72_0
-  - numba=0.53.0=py38h5c177ec_0
-  - numpy=1.20.2=py38ha4e8547_0
-  - numpy-base=1.20.2=py38hc2deb75_0
-  - oauthlib=3.1.0=py_0
-  - olefile=0.46=py_0
-  - openssl=1.1.1k=h2bbff1b_0
-  - opt_einsum=3.3.0=pyhd3eb1b0_1
-  - packaging=20.9=pyh44b312d_0
-  - pandas=1.2.4=py38hd77b12b_0
-  - pandoc=2.14.0.2=h8ffe710_0
-  - pandocfilters=1.4.2=py_1
-  - parquet-cpp=1.5.1=2
-  - parso=0.8.2=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
-  - pillow=8.2.0=py38h4fa10fc_0
-  - pip=21.1.2=py38haa95532_0
-  - plotly=4.14.3=pyhd3eb1b0_0
-  - prometheus_client=0.11.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.19=pyha770c72_0
-  - protobuf=3.14.0=py38hd77b12b_1
-  - pyarrow=3.0.0=py38ha37a76c_4_cpu
-  - pyasn1=0.4.8=py_0
-  - pyasn1-modules=0.2.8=py_0
-  - pycparser=2.20=py_2
-  - pydeck=0.6.2=pyh44b312d_0
-  - pygments=2.9.0=pyhd8ed1ab_0
-  - pyjwt=1.7.1=py38_0
-  - pynndescent=0.5.2=pyh44b312d_0
-  - pyopenssl=20.0.1=pyhd3eb1b0_1
-  - pyparsing=2.4.7=pyhd3eb1b0_0
-  - pyqt=5.9.2=py38ha925a31_4
-  - pyreadline=2.1=py38_1
-  - pyrsistent=0.17.3=py38h294d835_2
-  - pysocks=1.7.1=py38haa95532_0
-  - python=3.8.10=hdbf39b2_7
-  - python-dateutil=2.8.1=pyhd3eb1b0_0
-  - python_abi=3.8=1_cp38
-  - pytz=2021.1=pyhd8ed1ab_0
-  - pywin32=300=py38h294d835_0
-  - pywinpty=0.5.7=py38haa244fe_1
-  - pyyaml=5.4.1=py38h2bbff1b_1
-  - pyzmq=22.1.0=py38h09162b1_0
-  - qt=5.9.7=vc14h73c81de_0
-  - re2=2020.11.01=h0e60522_0
-  - requests=2.25.1=pyhd3eb1b0_0
-  - requests-oauthlib=1.3.0=py_0
-  - retrying=1.3.3=py_2
-  - rsa=4.7.2=pyhd3eb1b0_1
-  - s3transfer=0.4.2=pyhd8ed1ab_0
-  - scikit-learn=0.24.2=py38hf11a4ad_1
-  - scipy=1.6.2=py38h66253e8_1
-  - send2trash=1.5.0=py_0
-  - setuptools=52.0.0=py38haa95532_0
-  - sip=4.19.13=py38ha925a31_0
-  - six=1.16.0=pyhd3eb1b0_0
-  - smmap=3.0.5=pyh44b312d_0
-  - snappy=1.1.8=ha925a31_3
-  - sqlite=3.35.4=h2bbff1b_0
-  - streamlit=0.81.1=pyhd8ed1ab_0
-  - tbb=2021.2.0=h2d74725_0
-  - tensorboard=2.4.0=pyhc547734_0
-  - tensorboard-plugin-wit=1.6.0=py_0
-  - tensorflow=2.3.0=mkl_py38h8c0d9a2_0
-  - tensorflow-base=2.3.0=eigen_py38h75a453f_0
-  - tensorflow-estimator=2.5.0=pyh7b7c402_0
-  - termcolor=1.1.0=py38haa95532_1
-  - terminado=0.9.5=py38haa244fe_0
-  - testpath=0.5.0=pyhd8ed1ab_0
-  - threadpoolctl=2.1.0=pyh5ca1d4c_0
-  - tk=8.6.10=he774522_0
-  - toml=0.10.2=pyhd8ed1ab_0
-  - toolz=0.11.1=py_0
-  - tornado=6.1=py38h2bbff1b_0
-  - traitlets=5.0.5=py_0
-  - typing-extensions=3.7.4.3=hd3eb1b0_0
-  - typing_extensions=3.7.4.3=pyh06a4308_0
-  - tzlocal=2.1=pyh9f0ad1d_0
-  - umap-learn=0.5.1=py38haa244fe_1
-  - urllib3=1.26.4=pyhd3eb1b0_0
-  - validators=0.18.2=pyhd3deb0d_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
-  - watchdog=2.1.2=py38haa244fe_0
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - webencodings=0.5.1=py_1
-  - werkzeug=1.0.1=pyhd3eb1b0_0
-  - wheel=0.36.2=pyhd3eb1b0_0
-  - widgetsnbextension=3.5.1=py38haa244fe_4
-  - win_inet_pton=1.1.0=py38haa95532_0
-  - wincertstore=0.2=py38_0
-  - winpty=0.4.3=4
-  - wrapt=1.12.1=py38he774522_1
-  - xz=5.2.5=h62dcd97_0
-  - yaml=0.2.5=he774522_0
-  - yarl=1.6.3=py38h2bbff1b_0
-  - zeromq=4.3.4=h0e60522_0
-  - zipp=3.4.1=pyhd3eb1b0_0
-  - zlib=1.2.11=h62dcd97_4
-  - zstd=1.4.9=h19a0ad4_0
-prefix: D:\Miniconda3\envs\SuperCT-web-server
+  - _tflow_select=2.3.0
+  - abseil-cpp=20200923.3
+  - absl-py=0.12.0
+  - aiohttp=3.7.4
+  - altair=4.1.0
+  - argh=0.26.2
+  - argon2-cffi=20.1.0
+  - arrow-cpp=3.0.0
+  - astor=0.8.1
+  - astunparse=1.6.3
+  - async-timeout=3.0.1
+  - async_generator=1.10
+  - attrs=21.2.0
+  - aws-c-cal=0.4.5
+  - aws-c-common=0.5.1
+  - aws-c-event-stream=0.2.7
+  - aws-c-io=0.9.0
+  - aws-checksums=0.1.11
+  - aws-sdk-cpp=1.8.138
+  - backcall=0.2.0
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.4
+  - base58=2.1.0
+  - blas=1.0
+  - bleach=3.3.0
+  - blinker=1.4
+  - boto3=1.17.97
+  - botocore=1.20.97
+  - brotli=1.0.9
+  - brotlipy=0.7.0
+  - bzip2=1.0.8
+  - c-ares=1.17.1
+  - ca-certificates=2021.5.25
+  - cachetools=4.2.2
+  - certifi=2021.5.30
+  - cffi=1.14.5
+  - chardet=3.0.4
+  - click=8.0.1
+  - colorama=0.4.4
+  - coverage=5.5
+  - cryptography=3.4.7
+  - cycler=0.10.0
+  - cython=0.29.23
+  - decorator=5.0.9
+  - defusedxml=0.7.1
+  - entrypoints=0.3
+  - freetype=2.10.4
+  - gast=0.4.0
+  - gflags=2.2.2
+  - gitdb=4.0.7
+  - gitpython=3.1.18
+  - glog=0.4.0
+  - google-auth=1.31.0
+  - google-auth-oauthlib=0.4.4
+  - google-pasta=0.2.0
+  - grpc-cpp=1.35.0
+  - grpcio=1.36.1
+  - h5py=2.10.0
+  - hdf5=1.10.4
+  - icc_rt=2019.0.0
+  - icu=58.2
+  - idna=2.10
+  - importlib-metadata=3.10.0
+  - intel-openmp=2021.2.0
+  - ipykernel=5.5.5
+  - ipython=7.24.1
+  - ipython_genutils=0.2.0
+  - ipywidgets=7.6.3
+  - jedi=0.18.0
+  - jinja2=3.0.1
+  - jmespath=0.10.0
+  - joblib=1.0.1
+  - jpeg=9b
+  - jsonschema=3.2.0
+  - jupyter_client=6.1.12
+  - jupyter_core=4.7.1
+  - jupyterlab_pygments=0.1.2
+  - jupyterlab_widgets=1.0.0
+  - keras=2.4.3
+  - keras-applications=1.0.8
+  - keras-base=2.4.3
+  - keras-preprocessing=1.1.2
+  - kiwisolver=1.3.1
+  - krb5=1.19.1
+  - libcurl=7.77.0
+  - libpng=1.6.37
+  - libprotobuf=3.14.0
+  - libsodium=1.0.18
+  - libssh2=1.9.0
+  - libthrift=0.13.0
+  - libtiff=4.2.0
+  - libutf8proc=2.6.1
+  - llvmlite=0.36.0
+  - lz4-c=1.9.3
+  - m2w64-gcc-libgfortran=5.3.0
+  - m2w64-gcc-libs=5.3.0
+  - m2w64-gcc-libs-core=5.3.0
+  - m2w64-gmp=6.1.0
+  - m2w64-libwinpthread-git=5.0.0.4634.697f757
+  - markdown=3.3.4
+  - markupsafe=2.0.1
+  - matplotlib=3.3.4
+  - matplotlib-base=3.3.4
+  - matplotlib-inline=0.1.2
+  - mistune=0.8.4
+  - mkl=2021.2.0
+  - mkl-service=2.3.0
+  - mkl_fft=1.3.0
+  - mkl_random=1.2.1
+  - msys2-conda-epoch=20160418
+  - multidict=5.1.0
+  - nbclient=0.5.3
+  - nbconvert=6.0.7
+  - nbformat=5.1.3
+  - nest-asyncio=1.5.1
+  - notebook=6.4.0
+  - numba=0.53.0
+  - numpy=1.20.2
+  - numpy-base=1.20.2
+  - oauthlib=3.1.0
+  - olefile=0.46
+  - openssl=1.1.1k
+  - opt_einsum=3.3.0
+  - packaging=20.9
+  - pandas=1.2.4
+  - pandoc=2.14.0.2
+  - pandocfilters=1.4.2
+  - parquet-cpp=1.5.1
+  - parso=0.8.2
+  - pickleshare=0.7.5
+  - pillow=8.2.0
+  - pip=21.1.2
+  - plotly=4.14.3
+  - prometheus_client=0.11.0
+  - prompt-toolkit=3.0.19
+  - protobuf=3.14.0
+  - pyarrow=3.0.0
+  - pyasn1=0.4.8
+  - pyasn1-modules=0.2.8
+  - pycparser=2.20
+  - pydeck=0.6.2
+  - pygments=2.9.0
+  - pyjwt=1.7.1
+  - pynndescent=0.5.2
+  - pyopenssl=20.0.1
+  - pyparsing=2.4.7
+  - pyqt=5.9.2
+  - pyreadline=2.1
+  - pyrsistent=0.17.3
+  - pysocks=1.7.1
+  - python=3.8.10
+  - python-dateutil=2.8.1
+  - python_abi=3.8
+  - pytz=2021.1
+  - pywin32=300
+  - pywinpty=0.5.7
+  - pyyaml=5.4.1
+  - pyzmq=22.1.0
+  - qt=5.9.7
+  - re2=2020.11.01
+  - requests=2.25.1
+  - requests-oauthlib=1.3.0
+  - retrying=1.3.3
+  - rsa=4.7.2
+  - s3transfer=0.4.2
+  - scikit-learn=0.24.2
+  - scipy=1.6.2
+  - send2trash=1.5.0
+  - setuptools=52.0.0
+  - sip=4.19.13
+  - six=1.16.0
+  - smmap=3.0.5
+  - snappy=1.1.8
+  - sqlite=3.35.4
+  - streamlit=0.81.1
+  - tbb=2021.2.0
+  - tensorboard=2.4.0
+  - tensorboard-plugin-wit=1.6.0
+  - tensorflow=2.3.0
+  - tensorflow-base=2.3.0
+  - tensorflow-estimator=2.5.0
+  - termcolor=1.1.0
+  - terminado=0.9.5
+  - testpath=0.5.0
+  - threadpoolctl=2.1.0
+  - tk=8.6.10
+  - toml=0.10.2
+  - toolz=0.11.1
+  - tornado=6.1
+  - traitlets=5.0.5
+  - typing-extensions=3.7.4.3
+  - typing_extensions=3.7.4.3
+  - tzlocal=2.1
+  - umap-learn=0.5.1
+  - urllib3=1.26.4
+  - validators=0.18.2
+  - vc=14.2
+  - vs2015_runtime=14.27.29016
+  - watchdog=2.1.2
+  - wcwidth=0.2.5
+  - webencodings=0.5.1
+  - werkzeug=1.0.1
+  - wheel=0.36.2
+  - widgetsnbextension=3.5.1
+  - win_inet_pton=1.1.0
+  - wincertstore=0.2
+  - winpty=0.4.3
+  - wrapt=1.12.1
+  - xz=5.2.5
+  - yaml=0.2.5
+  - yarl=1.6.3
+  - zeromq=4.3.4
+  - zipp=3.4.1
+  - zlib=1.2.11
+  - zstd=1.4.9
